--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,14 @@ jobs:
       - name: Build
         run: pipenv run build
       - name: Commit and push if changed
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         run: |
           git diff
-          git config --global user.email "off3nied@gmail.com"
-          git config --global user.name "off3nied"
+          git config --global user.email "youremail@example.com"
+          git config --global user.name "Your Name"
+          git config --global credential.helper store
+          echo "machine github.com login off3nied password $GITHUB_TOKEN" > ~/.netrc
           git add README.md
-          git commit -m "Github Action Auto Updated"
+          git commit -m "GitHub Action Auto Updated"
           git push
