--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         run: |
+          git remote set-url origin https://oauth2:$GITHUB_TOKEN@github.com/${{ github.repository }}
           git diff
           git config --global user.email "youremail@example.com"
           git config --global user.name "Your Name"
