--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
       - main
       
 permissions:
-  contents: read
+  contents: write
   
 jobs:
   push:
@@ -32,7 +32,6 @@ jobs:
         run: pipenv run build
       - name: Commit and push if changed
         run: |
-          git remote set-url origin https://oauth2:${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
           git diff
           git config --global user.email "off3nied@gmail.com"
           git config --global user.name "off3nied"
